@@ -8,6 +8,7 @@ import com.example.spring_mvc_mongo_gradle.models.trello.response.Card;
 import com.example.spring_mvc_mongo_gradle.models.trello.response.ListofBoard;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class TrellotoDTO {
 
@@ -19,8 +20,7 @@ public class TrellotoDTO {
                                .name(boardValue.getName())
                                .closed(boardValue.getClosed())
                                .build()
-               )
-               .toList();
+               ).collect(Collectors.toList());
     }
 
     public static List<ListofBoardDTO> toListofBoardDTO(List<ListofBoard> listOfBoard){
@@ -29,18 +29,19 @@ public class TrellotoDTO {
                         ListofBoardDTO.builder()
                                 .id(varListOfBoardValue.getId())
                                 .name(varListOfBoardValue.getName())
-                                .desc(varListOfBoardValue.getDesc())
                                 .build()
-                )
-                .toList();
+                ).collect(Collectors.toList());
 
     }
 
-    public static CardDTO toCardDTO(Card card){
-        return CardDTO.builder()
-                .id(card.getId())
-                .name(card.getName())
-                .desc(card.getDesc())
-                .build();
+    public static List<CardDTO> toCardDTO(List<Card> card){
+        return card.stream()
+                .map(varCard ->
+                        CardDTO.builder()
+                        .id(varCard.getId())
+                        .name(varCard.getName())
+                        .desc(varCard.getDesc())
+                        .build()
+                ).collect(Collectors.toList());
     }
 }
